# bazel-workspace-rename-issue

./: .gitignore  README.md  WORKSPACE  package.json  tsconfig.json
service/: BUILD.bazel
