load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

package(default_visibility = ["//:__subpackages__"])

ts_library(
    name = "index",
    srcs = [
        "index.ts",
    ],
)

nodejs_image(
    name = "image",
    data = [
        ":index",
        "//:package.json",
    ],
    entry_point = ":index.ts",
)
